fixed grid template columns spacing and resizing

--- a/lesson9/styles/prophets.css
+++ b/lesson9/styles/prophets.css
@@ -1,6 +1,6 @@
 .cards{
     display: grid;
-    grid-template-columns: minmax(400px, auto) 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
 }
 
 .card{
